--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,15 @@
 			<artifactId>hadoop-common</artifactId>
 			<version>2.0.0-cdh4.3.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-core</artifactId>
+			<version>2.0.0-mr1-cdh4.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-hdfs</artifactId>
+			<version>2.0.0-cdh4.3.2</version>
+		</dependency>
 	</dependencies>
 </project>
