--- a/pom.xml
+++ b/pom.xml
@@ -42,4 +42,46 @@
 			<version>2.0.0-cdh4.3.2</version>
 		</dependency>
 	</dependencies>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<!-- <version>2.4</version> -->
+				<configuration>
+					<!-- 描述文件路径 -->
+					<descriptors>
+						<descriptor>src/main/resources/assembly.xml</descriptor>
+					</descriptors>
+					<!-- <descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<archive>
+						<manifest>
+							<mainClass></mainClass>
+						</manifest>
+					</archive> -->
+				</configuration>
+				<!-- execution的设置是为了将maven-assembly-plugin继承到标准的maven打包过程中，
+				这样在运行mvn package时就会执行maven-assembly-plugin的操作，从而实现我们需要的自定义打包 -->
+				<executions><!--执行器 mvn assembly:assembly-->
+					<execution>
+						<id>make-assembly</id><!--名字任意 -->
+						<phase>package</phase><!-- 绑定到package生命周期阶段上 -->  
+						<goals>
+							<goal>single</goal><!-- 只运行一次 -->  
+						</goals>
+					</execution>
+				</executions>
+			</plugin>  
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
